--- a/Shark game/Packages/manifest.json
+++ b/Shark game/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ai.navigation.components": "1.0.0-exp.1",
     "com.unity.collab-proxy": "1.13.5",
+    "com.unity.feature.cinematic": "1.0.0",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
