--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 Shark game/UserSettings/EditorUserSettings.asset
+Shark game/UserSettings/Layouts/default-2021.dwlt
+Shark game/UserSettings/EditorUserSettings.asset
